[workspace]
members = ["programs/*", "chain_caller"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
solana-program = "2.3"
anchor-lang = "0.32.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
